# crypto-wrap

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  gen_key.py
include/: createkeys.h  cryptoWrapper.hpp  decrypt.h  encrypt.h  general.h  keysWrapper.hpp
src/: capture_webcam.c  capture_webcam.cpp  createkeys.c  createkeys.h  cryptoWrapper.cpp  decrypt.c  decrypt.h  encrypt.c  encrypt.h  example.cpp  keysWrapper.cpp  main.c  test.c  test.cpp  test2.c
